# mnist_reader

./: CMakeLists.txt  main.cpp
